--- a/LoopLAB/css/style.css
+++ b/LoopLAB/css/style.css
@@ -1,8 +1,48 @@
 body {
     background: #333;
-    color: #fff;
+    color: white;
 }
 
 .navbar {
     border-bottom: 3px #008ed6 solid;
+    opacity: 0.8;
+}
+
+#home {
+    background: url(../img/home.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 700px;
+}
+
+#home .dark-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 700px;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#home .home-inner {
+    padding-top: 150px;
+}
+
+.card-form {
+    opacity: 0.8;
+}
+
+#home .fas, #create-section .fas {
+    color: #008ed6;
+    background-color: white;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+#explore-section .fas, #share-section .fas {
+    color: white;
+    background-color: #333;
+    padding: 5px;
+    border-radius: 5px;
 }
